# algomatter

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  dev.sh  flake.nix  nginx.conf  sample_signals.csv
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yml  postman_collection.json  pyproject.toml  worker.py
backend/app/: config.py  config_router.py  context.py  feature_flags.py  main.py
backend/app/analytics/: metrics.py  router.py  service.py
backend/app/auth/: deps.py  router.py  schemas.py  service.py
backend/app/backtesting/: engine.py  (+2 more)
backend/docs/: order-error-log.json
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_backtesting.py  test_binance_testnet.py  test_broker_connections.py  test_broker_factory.py  test_broker_live_data.py  test_broker_pool.py  test_brokers.py  test_config_router.py  test_crypto.py  test_deployments_router.py  test_e2e_hosted_strategy.py  test_events.py  test_exchange1.py  test_executor_pool.py  test_feature_flags_backtesting.py  test_feature_flags_config.py  test_feature_flags_deployments.py  test_feature_flags_deps.py  test_feature_flags_live_unaffected.py  test_feature_flags_paper.py  test_health.py  test_historical.py  test_integration.py  test_live_trading.py  test_manual_trades.py  test_metrics.py  test_nautilus_integration.py  test_paper_trading.py  test_rate_limiter.py  test_signal_processor.py  test_strategies.py  test_strategy_runner.py  test_strategy_sdk.py  test_subprocess_entry.py  test_webhook_executor.py  test_webhook_live_dispatch.py  test_webhook_mapper.py  (+3 more)
(+315 files in other folders)
